refactor the whole app

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-echo-boilerplate
-
-# Goland
+# GoLand
 .idea
+
+# binary
+app
