--- a/.redocly.lint-ignore.yaml
+++ b/.redocly.lint-ignore.yaml
@@ -1,9 +1,15 @@
 # This file instructs Redocly's linter to ignore the rules contained for specific parts of your API.
 # See https://redoc.ly/docs/cli/ for more information.
-openapi/paths/signup.yaml:
+openapi/paths/auth_signup.yaml:
   security-defined:
     - '#/post'
-openapi/paths/login.yaml:
+openapi/paths/auth_login.yaml:
+  security-defined:
+    - '#/post'
+openapi/paths/auth_refresh.yaml:
+  security-defined:
+    - '#/post'
+openapi/paths/auth_logout.yaml:
   security-defined:
     - '#/post'
 openapi/paths/users_{username}.yaml:
