--- a/openapi/paths/auth_logout.yaml
+++ b/openapi/paths/auth_logout.yaml
@@ -2,18 +2,26 @@ post:
   summary: Log out a user
   description: Revoke a refresh token
   operationId: authLogout
-  security:
-    - cookieAuth: []
-    - bearerAuth: []
   tags:
     - auth
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          $ref: '../components/schemas/RefreshToken.yaml'
   responses:
     '204':
       description: Successfully revoked token
       headers:
         Set-Cookie:
           schema:
-            $ref: '../components/headers/SetCookie.yaml'
+            type: string
+            example: access_token=; Path=/; Secure; SameSite=Strict; Domain=localhost
+        "\0Set-Cookie":
+          schema:
+            type: string
+            example: refresh_token=; Path=/auth; HttpOnly; Secure; SameSite=Strict; Domain=localhost
     '401':
       $ref: '../components/responses/Unauthorized.yaml'
     '403':
