--- a/openapi/components/headers/Link.yaml
+++ b/openapi/components/headers/Link.yaml
@@ -1,2 +1,2 @@
 type: string
-example: <http://api.test/recipes?per_page=10&page=6>; rel=next, <http://api.test/recipes?per_page=10&page=10>; rel=last, <http://api.test/recipes?per_page=10&page=1>; rel=first, <http://api.test/recipes?per_page=10&page=4>; rel=prev
+example: <http://example.com/users?per_page=1&page=3>; rel=next, <http://example.com/users?per_page=1&page=10>; rel=last, <http://example.com/users?per_page=1&page=1>; rel=first, <http://example.com/users?per_page=1&page=1>; rel=prev
