--- a/openapi/paths/users.yaml
+++ b/openapi/paths/users.yaml
@@ -8,21 +8,21 @@ get:
   tags:
     - users
   parameters:
-    - name: limit
+    - name: per_page
       in: query
-      description: How many documents to return
+      description: Number of users to return per page
       schema:
         type: integer
         minimum: 1
         maximum: 100
         default: 10
-    - name: offset
+    - name: page
       in: query
-      description: How many documents to skip, useful for pagination-like behaviour.
+      description: Page
       schema:
         type: integer
-        minimum: 0
-        default: 0
+        minimum: 1
+        default: 1
   responses:
     '200':
       description: Successfully returned a list of users
