--- a/openapi/components/headers/SetCookie.yaml
+++ b/openapi/components/headers/SetCookie.yaml
@@ -1,2 +1,2 @@
 type: string
-example: access_token=eyJhbGciOi...; Path=/; Secure; SameSite=Strict; Domain=localhost
+example: access_token=eyJhbGciOi...; Path=/; Secure; SameSite=Strict; Domain=example.com
