--- a/openapi/components/headers/SetCookieRefresh.yaml
+++ b/openapi/components/headers/SetCookieRefresh.yaml
@@ -1,2 +1,2 @@
 type: string
-example: refresh_token=eyJhbGciOi...; Path=/auth; HttpOnly; Secure; SameSite=Strict; Domain=localhost
+example: refresh_token=eyJhbGciOi...; Path=/auth; HttpOnly; Secure; SameSite=Strict; Domain=example.com
