--- a/openapi/paths/auth_refresh.yaml
+++ b/openapi/paths/auth_refresh.yaml
@@ -1,6 +1,6 @@
 post:
   summary: Refresh token
-  description: Return new tokens
+  description: Returns new tokens
   operationId: authRefresh
   tags:
     - auth
