--- a/openapi/components/schemas/Login.yaml
+++ b/openapi/components/schemas/Login.yaml
@@ -7,6 +7,7 @@ properties:
   email:
     type: string
     description: The email of the user
+    example: test@example.com
   password:
     type: string
     description: The password of the user
