--- a/openapi/components/schemas/Signup.yaml
+++ b/openapi/components/schemas/Signup.yaml
@@ -9,12 +9,14 @@ properties:
     type: string
     format: email
     description: The email of the user
+    example: test@example.com
   username:
     type: string
     pattern: "^[0-9a-zA-Z._]+$"
     description: The username of the user
     minLength: 2
     maxLength: 30
+    example: test
   password:
     type: string
     format: password
