--- a/openapi/components/schemas/Task_Update.yaml
+++ b/openapi/components/schemas/Task_Update.yaml
@@ -6,6 +6,7 @@ properties:
     description: The name of the user
     minLength: 0
     maxLength: 100
+    example: My Updated Task
   is_private:
     type: boolean
   is_completed:
