--- a/openapi/components/schemas/User.yaml
+++ b/openapi/components/schemas/User.yaml
@@ -11,19 +11,23 @@ properties:
     description: The username of the user
     minLength: 2
     maxLength: 30
+    example: test
   email:
     type: string
     description: The email of the user
+    example: test@example.com
   name:
     type: string
     description: The name of the user
     minLength: 0
     maxLength: 100
+    example: Test
   bio:
     type: string
     description: The biography of the user
     minLength: 0
     maxLength: 1000
+    example: This is my example bio.
   created_at:
     type: string
     nullable: true
