--- a/openapi/components/schemas/User_Update.yaml
+++ b/openapi/components/schemas/User_Update.yaml
@@ -9,8 +9,10 @@ properties:
     description: The name of the user
     minLength: 0
     maxLength: 100
+    example: Test Updated
   bio:
     type: string
     description: The biography of the user
     minLength: 0
     maxLength: 1000
+    example: This is my updated example bio.
