--- a/openapi/paths/tasks_{id}.yaml
+++ b/openapi/paths/tasks_{id}.yaml
@@ -2,6 +2,9 @@ get:
   summary: Get a task
   description: Returns a task
   operationId: getTask
+  security:
+    - cookieAuth: []
+    - bearerAuth: []
   tags:
     - tasks
   parameters:
@@ -25,6 +28,9 @@ patch:
   summary: Update a task
   description: Returns the updated task
   operationId: updateTask
+  security:
+    - cookieAuth: []
+    - bearerAuth: []
   tags:
     - tasks
   parameters:
@@ -58,6 +64,9 @@ delete:
   summary: Delete a task
   description: Deletes a task
   operationId: deleteTask
+  security:
+    - cookieAuth: []
+    - bearerAuth: []
   tags:
     - tasks
   parameters:
