--- a/openapi/components/schemas/Error.yaml
+++ b/openapi/components/schemas/Error.yaml
@@ -1,7 +1,8 @@
 type: object
+description: Error response
+additionalProperties: false
+required:
+  - message
 properties:
   message:
     type: string
-required:
-  - message
-additionalProperties: false
