--- a/openapi/components/schemas/Username.yaml
+++ b/openapi/components/schemas/Username.yaml
@@ -14,13 +14,21 @@ properties:
     minLength: 2
     maxLength: 30
     example: test
+  name:
+    type: string
+    description: The name of the user
+    example: Test
+    minLength: 0
+    maxLength: 100
   created_at:
     type: string
-    nullable: true
     format: date-time
     description: User creation date time
+    example: '2022-11-12T09:11:42.420Z'
+    nullable: true
   updated_at:
     type: string
-    nullable: true
     format: date-time
     description: User last update date time
+    example: '2022-11-12T10:23:56.069Z'
+    nullable: true
