--- a/.redocly.lint-ignore.yaml
+++ b/.redocly.lint-ignore.yaml
@@ -1,5 +1,11 @@
 # This file instructs Redocly's linter to ignore the rules contained for specific parts of your API.
 # See https://redoc.ly/docs/cli/ for more information.
+openapi/paths/tasks.yaml:
+  operation-4xx-response:
+    - '#/get/responses'
+openapi/paths/user.yaml:
+  operation-4xx-response:
+    - '#/get/responses'
 openapi/paths/auth_signup.yaml:
   security-defined:
     - '#/post'
