add user personal access tokens
Signed-off-by: alexferl <me@alexferl.com>

--- a/openapi/components/schemas/Task_Update.yaml
+++ b/openapi/components/schemas/Task_Update.yaml
@@ -8,5 +8,6 @@ properties:
     minLength: 0
     maxLength: 100
     example: My Updated Task
-  is_completed:
+  completed:
     type: boolean
+    example: true
