--- a/openapi/components/schemas/Task.yaml
+++ b/openapi/components/schemas/Task.yaml
@@ -9,10 +9,8 @@ properties:
   title:
     type: string
     description: The title of the task
-    minLength: 0
-    maxLength: 100
     example: My Task
-  is_completed:
+  completed:
     type: boolean
     example: true
   completed_at:
