--- a/openapi/paths/user_personal_access_tokens_{id}.yaml
+++ b/openapi/paths/user_personal_access_tokens_{id}.yaml
@@ -1,6 +1,6 @@
 get:
-  summary: Get a personal access tokens
-  description: Returns a personal access tokens.
+  summary: Get a personal access token
+  description: Returns a personal access token.
   operationId: getPersonalAccessToken
   security:
     - cookieAuth: []
@@ -15,7 +15,7 @@ get:
         type: string
   responses:
     '200':
-      description: Successfully returned a personal access tokens
+      description: Successfully returned a personal access token
       content:
         application/json:
           schema:
