--- a/openapi/components/schemas/Token.yaml
+++ b/openapi/components/schemas/Token.yaml
@@ -10,14 +10,17 @@ properties:
   access_token:
     type: string
     description: Access token
+    example: eyJhbGciOi...
     readOnly: true
   expires_in:
     type: number
-    description: refresh_token expiry in seconds
+    description: access_token expiry in seconds
+    example: 3600
     readOnly: true
   refresh_token:
     type: string
     description: Refresh token
+    example: eyJhbGciOi...
     readOnly: true
   token_type:
     type: string
