--- a/configs/config.local.toml
+++ b/configs/config.local.toml
@@ -3,7 +3,8 @@ log-level = "DEBUG"
 
 cookies-enabled = true
 csrf-enabled = true
+csrf-secret-key = "changeme"
 
 http-cors-enabled = true
 http-cors-allow-credentials = true
-http-cors-allow-origins = ["*"] # change
+http-cors-allow-origins = ["*"] # TODO: change to the web app's domain
