add log errors, refactor models

--- a/configs/config.local.toml
+++ b/configs/config.local.toml
@@ -2,7 +2,7 @@ env-name = "local"
 log-level = "DEBUG"
 
 cookies-enabled = true
-csrf-enabled = true
+csrf-enabled = false
 csrf-secret-key = "changeme"
 
 http-cors-enabled = true
