--- a/openapi/components/schemas/ArrayOfTasks.yaml
+++ b/openapi/components/schemas/ArrayOfTasks.yaml
@@ -1,7 +1,7 @@
 type: object
+additionalProperties: false
 properties:
   tasks:
     type: array
     items:
-      type: object
       $ref: './Task.yaml'
