--- a/openapi/components/schemas/ArrayOfPersonalAccessTokens.yaml
+++ b/openapi/components/schemas/ArrayOfPersonalAccessTokens.yaml
@@ -1,7 +1,7 @@
 type: object
+additionalProperties: false
 properties:
   personal_access_tokens:
     type: array
     items:
-      type: object
       $ref: './PersonalAccessToken.yaml'
