--- a/openapi/components/schemas/ArrayOfUsers.yaml
+++ b/openapi/components/schemas/ArrayOfUsers.yaml
@@ -1,7 +1,7 @@
 type: object
+additionalProperties: false
 properties:
   users:
     type: array
     items:
-      type: object
       $ref: './User.yaml'
