--- a/openapi/components/schemas/Task_Update.yaml
+++ b/openapi/components/schemas/Task_Update.yaml
@@ -4,7 +4,7 @@ additionalProperties: false
 properties:
   title:
     type: string
-    description: The name of the user
+    description: The title of the task
     minLength: 0
     maxLength: 100
     example: My Updated Task
