--- a/openapi/components/schemas/PublicUser.yaml
+++ b/openapi/components/schemas/PublicUser.yaml
@@ -20,3 +20,7 @@ properties:
     type: string
     description: The name of the user
     example: Test
+  bio:
+    type: string
+    description: The biography of the user
+    example: This is my bio.
