--- a/openapi/components/schemas/User.yaml
+++ b/openapi/components/schemas/User.yaml
@@ -1,4 +1,5 @@
 type: object
+description: User response
 additionalProperties: false
 properties:
   id:
@@ -16,10 +17,6 @@ properties:
     pattern: '^[0-9a-zA-Z._]+$'
     description: The username of the user
     example: test
-  email:
-    type: string
-    description: The email of the user
-    example: test@example.com
   name:
     type: string
     description: The name of the user
