--- a/openapi/paths/users/{id}_status.yaml
+++ b/openapi/paths/users/{id}_status.yaml
@@ -8,7 +8,7 @@ put:
   tags:
     - users
   parameters:
-    - name: id_or_username
+    - name: id
       in: path
       required: true
       schema:
@@ -26,5 +26,13 @@ put:
         application/json:
           schema:
             $ref: '../../components/schemas/users/User.yaml'
+    '401':
+      $ref: '../../components/responses/Unauthorized.yaml'
+    '403':
+      $ref: '../../components/responses/Forbidden.yaml'
+    '409':
+      $ref: '../../components/responses/Conflict.yaml'
+    '410':
+      $ref: '../../components/responses/Gone.yaml'
     '422':
       $ref: '../../components/responses/UnprocessableEntity.yaml'
