--- a/openapi/paths/auth/token.yaml
+++ b/openapi/paths/auth/token.yaml
@@ -14,3 +14,5 @@ get:
         application/json:
           schema:
             $ref: '../../components/schemas/auth/Token.yaml'
+    '401':
+      $ref: '../../components/responses/Unauthorized.yaml'
